<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b4"
    tools:context=".GenerateTimeTable">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="@string/please_select_number_of_subject_you_have_failed"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="440dp"
        android:layout_height="38dp"
        android:text="@string/Please_select_your_current_semester"
        android:textSize="18sp"
        android:typeface="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="416dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="679dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="321dp"
        android:layout_height="46dp"
        android:fontFamily="@font/andada"
        android:text="@string/generate_time_table"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="440dp"
        android:layout_height="38dp"
        android:text="@string/Please_select_your_current_program"
        android:textSize="18sp"
        android:typeface="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="562dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="440dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="440dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="480dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="440dp"
        android:layout_height="38dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="620dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="400dp" />

</androidx.constraintlayout.widget.ConstraintLayout>