<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usereditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/b3"
        tools:context=".GenerateTimeTable">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="344dp"
            android:layout_marginBottom="363dp"
            android:fontFamily="sans-serif"
            android:text="@string/new_password"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="333dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="456dp"
            android:layout_marginBottom="235dp"
            android:text="@string/confirm_password"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText

            android:layout_width="328dp"
            android:layout_height="45dp"
            android:layout_marginTop="384dp"
            android:layout_marginBottom="302dp"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.638"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="328dp"
            android:layout_height="45dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="488dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="198dp"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,MissingConstraints" />

        <Button
            android:id="@+id/button2"
            android:layout_width="258dp"
            android:layout_height="47dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="589dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="95dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="333dp"
            android:layout_height="74dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="221dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="436dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>