<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminTimetableFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/b6">


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="685dp"
            android:text="Add subject"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="221dp"
            android:layout_marginEnd="268dp"
            android:layout_marginBottom="488dp"
            android:text="Subject Code"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/subjectcode"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="455dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="262dp"
            android:layout_marginBottom="425dp"
            android:text="Subject Name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/subjectname"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="319dp"
            android:layout_marginBottom="388dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="354dp"
            android:layout_marginEnd="262dp"
            android:layout_marginBottom="355dp"
            android:text="lecturer Name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/classroom"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="503dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="204dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPrerequisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="419dp"
            android:layout_marginEnd="277dp"
            android:layout_marginBottom="290dp"
            android:text="Prerequisite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <MultiAutoCompleteTextView
            android:id="@+id/prerequisite"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="441dp"
            android:layout_marginEnd="52dp"
            android:hint="@string/spinner_prompt4"
            android:completionThreshold="1"
            android:layout_marginBottom="266dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewclassss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="474dp"
            android:layout_marginEnd="285dp"
            android:layout_marginBottom="235dp"
            android:text="Classroom"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lecturer"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="387dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="320dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="539dp"
            android:layout_marginEnd="335dp"
            android:layout_marginBottom="170dp"
            android:text="Day"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="601dp"
            android:layout_marginEnd="322dp"
            android:layout_marginBottom="108dp"
            android:text="Time"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <MultiAutoCompleteTextView
            android:id="@+id/days"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="560dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="147dp"
            android:completionThreshold="1"
            android:hint="Select days"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addtimetable"
            android:layout_width="150dp"
            android:layout_height="47dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="668dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="16dp"
            android:text="Add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="623dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="84dp"
            android:prompt="@string/spinner_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/semi"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="628dp"
            android:prompt="@string/spinner_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/programme"
            android:layout_width="310dp"
            android:layout_height="34dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="572dp"
            android:prompt="@string/spinner_prompt1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/className"
            android:layout_width="310dp"
            android:layout_height="24dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="519dp"
            android:prompt="@string/spinner_prompt2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView207"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="159dp"
            android:layout_marginEnd="322dp"
            android:layout_marginBottom="550dp"
            android:text="Class"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView209"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="296dp"
            android:layout_marginBottom="606dp"
            android:text="Program"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="294dp"
            android:layout_marginBottom="652dp"
            android:text="Semester"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>